# Hemerion

./: .clang-format  .clang-tidy  .cmake-format  .gitignore  .gitmodules  .run-clang-format  .run-cmake-format  CMakeLists.txt  CMakePresets.json  README.md  get_project_name.py  package.xml
.github/: dependabot.yml
.github/workflows/: clang_format.yml  clang_tidy.yml  cmake_format.yml  cmake_lint.yml  coverage.yml  cross_build.yml  deploy-docs.yml  iwyu.yml  linux.yml  metrixpp.yml  sanitizers.yml  swil.yml  windows.yml
apps/: CMakeLists.txt  README.md
apps/can_actuator_link/: CMakeLists.txt  main.cpp
apps/gnc_flight/: README.md
apps/led_blink/: CMakeLists.txt  README.md  main.cpp
bsp/: README.md
bsp/stm32h743_nucleo/: CMakeLists.txt  FreeRTOSConfig.h  README.md  freertos_port.cmake  package.xml
bsp/stm32h743_nucleo/include/: stm32h7xx_hal_conf.h
bsp/stm32h743_nucleo/include/hemerion/hal/: board.h  gpio.h  uart.h
bsp/stm32h743_nucleo/linker/: stm32h743zi_flash.ld
bsp/stm32h743_nucleo/src/: board.c  freertos_hooks.c  gpio.c  startup_stm32h743xx.s  system_stm32h7xx.c  uart.c
cmake/: FindAetherion.cmake  FindArmNoneEabiGcc.cmake  FindPyrenode3.cmake  FindRenode.cmake  README.md
cmake/Safety/: FlightSafe.hpp
doc/: CMakeLists.txt  Doxyfile.in  bsp_freertos_wiring.rst  conf.py  index.rst  led_blink_tutorial.rst  references.bib  requirements.txt  rocket_gps_ecos_cosim.rst  sensor_models.rst  swil_windows_setup.rst
doc/tikz/: CMakeLists.txt
examples/: CMakeLists.txt  README.md
examples/rocket_gps_ecos/: CMakeLists.txt  README.md  cosim_host_main.cpp  flight_computer_main.cpp  plot_results.py  udpReceiver.cpp  udpReceiver.hpp
fpga/: README.md
fpga/ip/can_fd/: README.md
fpga/verilator/: README.md
modules/: README.md
modules/actuators/: package.xml
modules/comms/: CMakeLists.txt  package.xml
modules/comms/include/hemerion/comms/: can_fifo.h  can_frame.h
modules/comms/src/: can_frame.cpp
modules/comms/test/: CMakeLists.txt  test_can_frame.cpp
modules/fault/: CMakeLists.txt  package.xml
modules/fault/include/hemerion/fault/: fault_registry.h  watchdog.h
modules/fault/src/: fault_registry.cpp  watchdog.cpp
modules/fault/test/: CMakeLists.txt  test_fault_registry.cpp  test_health_monitor_loop.cpp  test_watchdog.cpp
modules/gnc/: README.md  package.xml
modules/power/: CMakeLists.txt  package.xml
modules/power/include/hemerion/power/: battery_monitor.h  regulator_sequencer.h
modules/power/src/: battery_monitor.cpp  regulator_sequencer.cpp
modules/power/test/: CMakeLists.txt  test_battery_monitor.cpp  test_regulator_sequencer.cpp
modules/rtos_core/: CMakeLists.txt  package.xml
modules/rtos_core/include/hemerion/rtos_core/: memory_pool.h  queue_registry.h  task_priority.h  task_registry.h  tick.h
modules/rtos_core/src/: queue_registry.cpp  task_registry.cpp
modules/rtos_core/test/: CMakeLists.txt  test_memory_pool.cpp  test_queue_registry.cpp  test_task_registry.cpp
modules/sensors/: CMakeLists.txt  package.xml
modules/sensors/include/Hemerion/baro/: baro_conversion.h  baro_packet.h  baro_types.h
modules/sensors/include/Hemerion/baro/fmu/: CMakeLists.txt  baro_noise_model.h  baro_packet_emitter.h  fmu_main.cpp  model_description.xml
modules/sensors/include/Hemerion/gps/: gpsDriver.hpp  gpsTypes.hpp  nmeaParser.hpp  ubxParser.hpp
modules/sensors/include/Hemerion/gps/fmu/: CMakeLists.txt  fmi2Minimal.hpp  fmuMain.cpp  gpsNoiseModel.hpp  model_description.xml  ubxEmitter.hpp  udpSender.hpp
modules/sensors/include/Hemerion/imu/: imu_conversion.h  imu_packet.h  imu_types.h
modules/sensors/include/Hemerion/imu/fmu/: CMakeLists.txt  fmu_main.cpp  imu_noise_model.h  imu_packet_emitter.h  model_description.xml
modules/sensors/include/Hemerion/mag/: mag_conversion.h  mag_packet.h  mag_types.h
modules/sensors/include/Hemerion/mag/fmu/: CMakeLists.txt  fmu_main.cpp  mag_noise_model.h  mag_packet_emitter.h  model_description.xml
modules/sensors/include/Hemerion/radalt/: radalt_conversion.h  radalt_packet.h  radalt_types.h
modules/sensors/include/Hemerion/radalt/fmu/: CMakeLists.txt  fmu_main.cpp  model_description.xml  radalt_noise_model.h  radalt_packet_emitter.h
modules/sensors/src/baro/: baro_conversion.cpp  baro_packet.cpp
modules/sensors/src/baro/fmu/: baro_packet_emitter.cpp
modules/sensors/src/gps/: nmeaParser.cpp  ubxParser.cpp
modules/sensors/src/gps/fmu/: ubxEmitter.cpp  udpSender.cpp
modules/sensors/src/imu/: imu_conversion.cpp  imu_packet.cpp
modules/sensors/src/imu/fmu/: imu_packet_emitter.cpp
modules/sensors/src/mag/: mag_conversion.cpp  mag_packet.cpp
modules/sensors/src/mag/fmu/: mag_packet_emitter.cpp
modules/sensors/src/radalt/: radalt_conversion.cpp  radalt_packet.cpp
modules/sensors/src/radalt/fmu/: radalt_packet_emitter.cpp
modules/sensors/test/: CMakeLists.txt  test_baro_packet.cpp  test_gps_driver.cpp  test_imu_conversion.cpp  test_imu_packet.cpp  test_mag_packet.cpp  test_nmea_parser.cpp  test_radalt_packet.cpp  test_ubx_emitter.cpp  test_ubx_parser.cpp
scripts/: check-toolchain.ps1  check-toolchain.sh  install-toolchain.ps1  install-toolchain.sh
sim/: CMakeLists.txt  README.md
sim/fmi/: package.xml
sim/renode/: package.xml
sim/renode/boards/: nucleo_h743zi2.repl
sim/renode/scripts/: swil_lockstep.resc
sim/shm_bridge/: CMakeLists.txt  package.xml
sim/shm_bridge/include/hemerion/sim/shm_bridge/: bridge_protocol.h  shm_bridge.h  shm_segment.h
sim/shm_bridge/src/: shm_bridge.cpp  shm_segment.cpp
sim/shm_bridge/test/: CMakeLists.txt  test_shm_bridge.cpp  test_shm_segment.cpp
sim/udp_bridge/: CMakeLists.txt  package.xml
sim/udp_bridge/include/hemerion/sim/udp_bridge/: bridge_protocol.h  udp_bridge.h  udp_socket.h
sim/udp_bridge/src/: udp_bridge.cpp  udp_socket.cpp
sim/udp_bridge/test/: CMakeLists.txt  test_udp_bridge.cpp  test_udp_socket.cpp
tests/: CMakeLists.txt  README.md
tests/swil/: CMakeLists.txt  conftest.py  requirements.txt  test_led_blink.py
toolchains/: README.md  arm-none-eabi.cmake  x86_64-linux.cmake  x86_64-windows-msvc.cmake
(+9 files in other folders)
