<?xml version="1.0" encoding="UTF-8"?>
<package name="hemerion_comms" version="0.1.0">
  <description>CAN framing, EtherCAT slave stack, MAVLink codec</description>
  <maintainer email="onur.tuncer@milteksan.com">Onur Tuncer</maintainer>
  <license>GPL-3.0-only</license>
  <url type="repository">https://github.com/onurtuncer/Hemerion</url>

  <build_depend>FreeRTOS::Kernel</build_depend>
  <build_depend>ETL::etl</build_depend>

  <export>
    <artifact type="static_lib" target="hemerion_comms"/>
    <artifact type="test" condition="HEMERION_BUILD_TESTS"/>
  </export>
</package>
