<?xml version="1.0" encoding="UTF-8"?>
<package name="hemerion_sensors" version="0.1.0">
  <description>IMU, barometer, radar altimeter, magnetometer, GPS drivers; raw to SI unit conversion; FMU export</description>
  <maintainer email="onur.tuncer@milteksan.com">Onur Tuncer</maintainer>
  <license>GPL-3.0-only</license>
  <url type="repository">https://github.com/onurtuncer/Hemerion</url>

  <build_depend>FreeRTOS::Kernel</build_depend>
  <build_depend>ETL::etl</build_depend>

  <export>
    <artifact type="static_lib" target="hemerion_sensors"/>
    <artifact type="fmu" condition="HEMERION_BUILD_FMU"/>
    <artifact type="test" condition="HEMERION_BUILD_TESTS"/>
  </export>
</package>
